--- a/src/app/admin/components/products/product-update/product-update.component.scss
+++ b/src/app/admin/components/products/product-update/product-update.component.scss
@@ -235,7 +235,8 @@ mat-card-actions {
 .mat-column-name,
 .mat-column-sku,
 .mat-column-categoryName,
-.mat-column-brandName {
+.mat-column-brandName,
+.mat-column-title {
   min-width: 100px;
 }
 
