--- a/src/app/ui/components/product/product-detail/product-detail.component.html
+++ b/src/app/ui/components/product/product-detail/product-detail.component.html
@@ -35,18 +35,19 @@
       <!-- Add star rating component here -->
       <span class="rating-score">4.8</span>
       <span class="rating-count">(1000+ Değerlendirme)</span>
+      <div class="like-container">
+        <i class="heart-icon" 
+           [ngClass]="{'liked': product.isLiked}"
+           (click)="toggleLike($event, product)">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+          </svg>
+        </i>
+      </div>
     </div>
     <p class="product-price">{{formatCurrency(product.price)}}</p>
 
-    <div class="like-container">
-      <i class="heart-icon" 
-         [ngClass]="{'liked': product.isLiked}"
-         (click)="toggleLike($event, product)">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
-        </svg>
-      </i>
-    </div>
+    
 
     <p class="product-stock" [class.in-stock]="product.stock > 0">
       {{product.stock > 0 ? 'Stokta' : 'Stokta Yok'}}
@@ -154,7 +155,9 @@
           <div *ngFor="let randomProduct of randomProducts.items" class="random-product-item" [routerLink]="['/product', randomProduct.id]">
             <div class="random-product-image">
               <img [src]="getProductImage(randomProduct)" [alt]="randomProduct.name">
-              <i class="heart-icon" [ngClass]="{'liked': randomProduct.isLiked}" (click)="toggleLike($event, product)">
+              <i class="heart-icon" 
+                 [ngClass]="{'liked': randomProduct.isLiked}" 
+                 (click)="toggleLikeRandomProduct($event, randomProduct)">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                   stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path
@@ -176,6 +179,63 @@
               </p>
             </div>
             <button class="random-product-add-to-cart-button" [disabled]="randomProduct.stock <= 0" (click)="addRandomProductToCart($event, randomProduct)">
+              Sepete Ekle
+            </button>
+          </div>
+        </div>
+        <button class="scroll-btn right" (click)="scrollRight()">
+          <!-- Sağ ok ikonu -->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="9 18 15 12 9 6"></polyline>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<section class="products">
+  <div *ngIf="randomProductsForBrands" class="random-products">
+    <h2>{{product.brandName}} Markalı Diğer Ürünler</h2>
+    <div class="container">
+      <button class="scroll-btn left" (click)="scrollLeft()">
+        <!-- Sol ok ikonu -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <polyline points="15 18 9 12 15 6"></polyline>
+        </svg>
+      </button>
+      <div class="product-grid">
+        <div class="random-product-list" #productGrid>
+          <div *ngFor="let randomProductsForBrand of randomProductsForBrands.items" class="random-product-item" [routerLink]="['/product', randomProductsForBrand.id]">
+            <div class="random-product-image">
+              <img [src]="getProductImage(randomProductsForBrand)" [alt]="randomProductsForBrand.name">
+              <i class="heart-icon" 
+                 [ngClass]="{'liked': randomProductsForBrand.isLiked}" 
+                 (click)="toggleLikeRandomProductForBrand($event, randomProductsForBrand)">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                  stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path
+                    d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                  </path>
+                </svg>
+              </i>
+            </div>
+            <div class="random-product-info">
+              <div class="name-title">
+                <p class="random-product-name">{{randomProductsForBrand.name}}</p>
+                <p class="random-product-title">{{randomProductsForBrand.title}}</p>
+              </div>
+              <p class="random-product-price">{{formatCurrency(randomProductsForBrand.price)}}</p>
+              <p class="random-product-features">
+                <ng-container *ngFor="let feature of randomProductsForBrand.productFeatureValues; let last = last">
+                  {{feature.featureValueName}}{{!last ? ', ' : ''}}
+                </ng-container>
+              </p>
+            </div>
+            <button class="random-product-add-to-cart-button" [disabled]="randomProductsForBrand.stock <= 0" (click)="addRandomProductForBrandToCart($event, randomProductsForBrand)">
               Sepete Ekle
             </button>
           </div>
