--- a/src/app/ui/components/filter/filter.component.scss
+++ b/src/app/ui/components/filter/filter.component.scss
@@ -8,7 +8,7 @@ $hover-color: rgba($primary-color, 0.1);
 .filter-container {
   background-color: $background-color;
   border: 1px solid $border-color;
-  border-radius: 8px;
+  
   padding: 1rem;
   font-family: "Roboto", Arial, sans-serif;
   position: sticky;
@@ -141,7 +141,7 @@ $hover-color: rgba($primary-color, 0.1);
           min-width: 0;
           padding: 0.5rem;
           border: 1px solid $border-color;
-          border-radius: 4px;
+          //border-radius: 4px;
           font-size: 0.9rem;
 
           &:focus {
@@ -156,7 +156,7 @@ $hover-color: rgba($primary-color, 0.1);
           background-color: $primary-color;
           color: $background-color;
           border: none;
-          border-radius: 4px;
+          //border-radius: 4px;
           font-size: 0.9rem;
           cursor: pointer;
           transition: background-color 0.3s ease;
