--- a/src/app/ui/components/main-header/main-header.component.scss
+++ b/src/app/ui/components/main-header/main-header.component.scss
@@ -101,7 +101,7 @@ $light-bg: #f3f4f6;
         flex-direction: column;
         align-items: center;
         transition: all 0.3s ease;
-        border-radius: 8px;
+        //border-radius: 8px;
 
         i {
           font-size: 1.5rem;
