--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -157,7 +157,7 @@
                   height: 50px;
                   object-fit: cover;
                   margin-right: 10px;
-                  border-radius: 4px;
+                  //border-radius: 4px;
                 }
       
                 .product-info {
@@ -201,7 +201,7 @@
                   height: 40px;
                   object-fit: cover;
                   margin-right: 10px;
-                  border-radius: 4px;
+                  //border-radius: 4px;
                 }
     
                 span {
