--- a/src/app/ui/components/search-results/search-results.component.scss
+++ b/src/app/ui/components/search-results/search-results.component.scss
@@ -45,7 +45,7 @@ $hover-color: rgba($primary-color, 0.1);
     padding: 2rem;
     background-color: $background-color;
     border: 1px solid $border-color;
-    border-radius: 8px;
+    //border-radius: 8px;
   }
 
   .product-list {
@@ -54,12 +54,12 @@ $hover-color: rgba($primary-color, 0.1);
     gap: 1.06rem;
 
     .product-item {
-      width: 244px;
-      height: 440px;
+      width: calc((1320px - 327px) / 3);
+      height: 520px;
       display: flex;
       flex-direction: column;
       border: 1px solid #e0e0e0;
-      border-radius: 8px;
+      //border-radius: 8px;
       cursor: pointer;
       transition: box-shadow 0.3s ease;
       position: relative;
@@ -81,14 +81,14 @@ $hover-color: rgba($primary-color, 0.1);
           width: 100%;
           height: 100%;
           object-fit: cover;
-          border-radius: 4px 4px 0 0;
+          //border-radius: 4px 4px 0 0;
         }
 
         .heart-icon {
           //dışında yuvarlak bir buton oluşturmak için
-          width: 40px;
-          height: 40px;
-          background-color: rgba(234, 234, 234, 0.1);
+          width: 30px;
+          height: 30px;
+          background-color: rgba(234, 234, 234, 0.549);
           border-radius: 50%;
           display: flex;
           align-items: center;
@@ -100,8 +100,8 @@ $hover-color: rgba($primary-color, 0.1);
           z-index: 1;
     
           svg {
-            width: 24px;
-            height: 24px;
+            width: 20px;
+            height: 20px;
             transition: all 0.3s ease;
           }
     
@@ -126,12 +126,14 @@ $hover-color: rgba($primary-color, 0.1);
       }
 
       .product-info {
-        padding: 0.6rem;
+        padding: 1rem;
         flex-grow: 1;
 
         .name-title {
+          display: flex;
           .brand-name {
-            margin: 0 0 0 0;
+            font-size: 1.25rem;
+            margin: 0 4px 0 0;
             color: $primary-color;
             font-weight: bold;
             text-decoration: none;
@@ -142,17 +144,18 @@ $hover-color: rgba($primary-color, 0.1);
             align-items: baseline;
 
             .product-name {
-              font-size: 0.9rem;
+              font-size: 1.1rem;
               font-weight: bold;
               margin-bottom: 0.2rem;
               color: $text-color;
             }
-            .product-title {
-              font-size: 0.9rem;
-              color: lighten($text-color, 20%);
-              margin-left: 5px;
-            }
           }
+        }
+
+        .product-title {
+          font-size: 1rem;
+          color: lighten($text-color, 20%);
+          height: 100px;
         }
 
         .product-price {
@@ -179,7 +182,7 @@ $hover-color: rgba($primary-color, 0.1);
         color: $background-color;
         background-color: $primary-color;
         border: none;
-        border-radius: 4px;
+        //border-radius: 4px;
         cursor: pointer;
         transition: opacity 0.3s ease, transform 0.3s ease,
           background-color 0.3s ease;
@@ -224,6 +227,6 @@ mat-paginator {
 
 .sort-dropdown select {
   padding: 5px;
-  border-radius: 4px;
+  //border-radius: 4px;
   border: 1px solid #ccc;
 }
